@@ -1117,12 +1117,15 @@ class BzrBranch(Branch):
         """See Branch.pull."""
         source.lock_read()
         try:
+            old_count = len(self.revision_history())
             try:
                 self.update_revisions(source)
             except DivergedBranches:
                 if not overwrite:
                     raise
                 self.set_revision_history(source.revision_history())
+            new_count = len(self.revision_history())
+            return new_count - old_count
         finally:
             source.unlock()
 
